--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -9,12 +9,21 @@ div.app {
   margin: 0;
 }
 
-h1 {
-  margin: 0;
+h1, label {
+  margin: 0
 }
 
 div.app {
   background-image: url('http://localhost:3333/rowdy.jpg');
   background-size: cover;
   background-position: center;
+}
+
+div.whoops-404 {
+  background-color: white;
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
