--- a/src/stylesheets/ui.scss
+++ b/src/stylesheets/ui.scss
@@ -119,6 +119,11 @@ div.ski-day-list {
   overflow-y: scroll;
 
   table {
+    caption {
+      background-color: white;
+      background-color: rgba(255,255,255, .9);
+      color: #8f2e32;
+    }
     width: 100%;
     background-color: rgba(255,255,255, .9);
     font-family: verdana, sans-serif;
@@ -208,6 +213,14 @@ form.add-day {
     input {
       width: calc(100% - .75em);
     }
+
+    span {
+      position: absolute;
+      top: 5px;
+      right: 10px;
+      font-size: 2em;
+    }
+
     .suggestions {
       position: absolute;
       top: 2em;
@@ -218,6 +231,8 @@ form.add-day {
       background-color: white;
       overflow-y: scroll;
       z-index: 3;
+
+
 
       p {
         padding: 1em;
