New structure for containers

--- a/src/stylesheets/AddDayForm.scss
+++ b/src/stylesheets/AddDayForm.scss
@@ -9,6 +9,7 @@ form.add-day {
   justify-content: space-around;
   align-items: stretch;
   height: calc(100% - 12em);
+  font-size: 1.7em;
 
   >label,
   div {
